# pyNebulosa

./: .gitignore  .readthedocs.yaml  DESCRIPTION  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  comparison.md  conf.py  index.md  installation.md  nebulosa_tutorial.ipynb  tutorial.md
nebulosa/: __init__.py  _kde.py  _plotting.py  _utils.py
pynebulosa/: __init__.py  _plotting.py
recipe/: meta.yaml
tests/: conftest.py  test_kde.py  test_plotting.py  test_utils.py
vignettes/: nebulosa_tutorial.ipynb
