[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nebulosa"
version = "0.1.0"
description = "Single-cell data visualization using kernel gene-weighted density estimation"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [
    {name = "Jose Alquicira-Hernandez"},
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "matplotlib>=3.5",
    "anndata>=0.8",
]

[project.optional-dependencies]
scanpy = ["scanpy>=1.9"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "scanpy>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["nebulosa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
